Fixed popup stuck at the top of the screen when opened

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,7 +24,7 @@
 }
 
 .digimonDetails {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     right: 0;
